Shang New Live/src/objects/System_Alert__c.object
<CustomObject>
    <fields>
        <fullName>App_Setting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>App Setting</label>
        <referenceTo>App_Setting__c</referenceTo>
        <relationshipLabel>System Alert</relationshipLabel>
        <relationshipName>System_Alert</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Image_Alert__c</fullName>
        <formula>IF( ISBLANK(  URL_Image_Alert__c  ) ,&quot;&quot;, IMAGE(URL_Image_Alert__c , &quot;Icon&quot;, 75,75) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Triggered_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Triggered By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>System Alert</relationshipLabel>
        <relationshipName>System_Alert</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Triggered_DateTime__c</fullName>
        <label>Last Triggered Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>System Alert</relationshipLabel>
        <relationshipName>System_Alert</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Running_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL_Image_Alert__c</fullName>
        <label>URL Image Alert</label>
        <type>Url</type>
    </fields>
    <label>System Alert</label>
    <nameField>
        <label>Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Alert</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>